# py-github-actions-demo

./: Dockerfile  README.md  docker-compose.yaml  format_code.yml  pyproject.toml
.github/workflows/: format_code.yml  python_ci.yml
src/: main.py
tests/: test_main.py
